MSAL Wiki : https://github.com/AzureAD/microsoft-authentication-library-for-android/wiki
V.Next
----------
- [MINOR] Adding sub error codes to MsalUiRequiredException (#1758)

Version 4.2.0
----------
- [PATCH] Update common @10.0.0

Version 4.1.3
----------
- [PATCH] Update common @9.1.0

Version 4.1.0
----------
- [MINOR] Add new exception type for broker protocol not supported exception during msal-broker handshake (#1703)

Version 4.0.4
----------
- [PATCH] Update common @8.0.2

Version 4.0.3
----------
- [PATCH] Update common @8.0.0

Version 4.0.2
----------
- [PATCH] Update common @7.0.0
- [PATCH] Updating the single account cache before notifying the caller of account change/load via callback. (#1688)
- [MINOR] Added keyboard flag to configChanges in Manifest for YubiKey compatibility. (#1685)

Version 4.0.1
----------
- [PATCH] Update common to 6.0.1

Version 4.0.0
----------
- [PATCH] Update common to 6.0.0
- [PATCH] Update androidx appcompat version from 1.0.2 -> 1.1.0 (#1629)
- [MINOR] Add prompt=create support. (#1611)
- [PATCH] Ensure consistent TAGs in the logger (#1612)
- [MAJOR] Deprecate methods not using TokenParameters (#1595)
- [PATCH] Update gson version to 2.8.9

Version 3.0.2
----------
- [PATCH] Update common@4.0.2

Version 3.0.1
-------------
- [PATCH] Fix msal get account crash in Account Matcher due to NPE because account id was missing (#1560)
- [PATCH] Better messaging clarity around redirect URI (#1265).
- [PATCH] Fixes deprecated PackageInfo.signatures and PackageManager.GET_SIGNATURES (#1321)
- [MINOR] Added support for handling null taskAffinity.  Add configuration to enable this new feature.  "handle_null_taskaffinity" which is a boolean (#1342)
- [PATCH] Log and throw exception if there are other apps listening for the redirect URL scheme defined in Android Manifest (#1357)
- [PATCH] Update Nimbus dependency version (#1382)
- [MAJOR] Migrate *TokenCache classes to common4j (#1652)